--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,19 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, user-scalable=yes" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Queen's Purity Test"
+      content="Queen's Purity Test - A fun way for Queen's University students to track and compare their university experiences."
     />
+    <meta name="keywords" content="Queen's University, purity test, university experience, Queen's students" />
+    <meta property="og:title" content="Queen's Purity Test" />
+    <meta property="og:description" content="A fun way for Queen's University students to track and compare their university experiences." />
+    <meta property="og:type" content="website" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
